--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,21 @@
 
     <!-- Edit meta tags for SEO -->
     <title>Shariq Shaukat - Portfolio</title>
-    <meta name="title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
-
+    <meta name="title" content="Innovative Software Solutions | Shariq Shaukat">
+    <meta name="description" content="Explore my software development and DevOps projects. Web and mobile apps deployed to the cloud for real-world impact.">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://developerfolio.js.org/">
-    <meta property="og:title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta property="og:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta property="og:url" content="https://portfolio.shariqdevops.online/">
+    <meta property="og:title" content="Innovative Software Solutions | Shariq Shaukat - Developer Portfolio">
+    <meta property="og:description" content="Explore my software development and DevOps projects. Web and mobile apps deployed to the cloud for real-world impact.">
     <!-- Link to a hosted image -->
-    <!-- <meta property="og:image" content=""> -->
-    
+    <!-- <meta property="og:image" content="https://yourportfolio.com/og-image.jpg"> -->
+
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://developerfolio.js.org/">
-    <meta property="twitter:title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta property="twitter:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta property="twitter:url" content="https://portfolio.shariqdevops.online">
+    <meta property="twitter:title" content="Shariq Shaukat - Software Developer Portfolio">
+    <meta property="twitter:description" content="Explore my software development and DevOps projects. Web and mobile apps deployed to the cloud for real-world impact.">
     <!-- Link to a hosted image -->
     <!-- <meta property="twitter:image" content=""> -->
 
@@ -29,16 +28,15 @@
     <meta name="theme-color" content="#6c63ff" />
 
     <!-- Customize icons -->
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png?v8=qAJ44G5Bm7">
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png?v8=qAJ44G5Bm7">
+    <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon-16x16.png">
     <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg?v8=qAJ44G5Bm7" color="#885bd5">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico?v8=qAJ44G5Bm7">
+    <link rel="shortcut icon" href="/public/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png?v8=qAJ44G5Bm7">
 	  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <link rel=preload href="/static/media/Montserrat-Regular.ee653992.ttf" as="font" type="font/woff" crossorigin>
     <link rel=preload href="/static/media/Agustina.21f233e1.woff" as="font" type="font/woff" crossorigin>
