--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Innovative Software Solutions | Shariq Shaukat - Developer Portfolio">
     <meta property="og:description" content="Explore my software development and DevOps projects. Web and mobile apps deployed to the cloud for real-world impact.">
     <!-- Link to a hosted image -->
-    <!-- <meta property="og:image" content="https://yourportfolio.com/og-image.jpg"> -->
+    <meta property="og:image" content="https://media.licdn.com/dms/image/D4D16AQEJZOMIGprkPA/profile-displaybackgroundimage-shrink_350_1400/0/1677171557280?e=1697673600&v=beta&t=YLSIDjHosaP19xJ5E2alsslFdfoi3BxQ6_3jppn3pOw">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
